--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_credits">Credits</string>
+    <string name="home">Home</string>
+    <string name="credits">Authors: Allen Zhou &amp; Preetham R.N.\n \n
+    This project is licensed under the terms of the MIT license.\n \n
+    Source code is available at https://github.com/Zhouball/BruinMenu \n \n
+    If you find an issue, send us an email at a.zhou@ucla.edu</string>
+
 </resources>
