Added easter egg and numerous fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="credits">Authors: Allen Zhou &amp; Preetham Reddy N.\n \n
     This project is licensed under the terms of the MIT license.\n \n
     Source code is available at https://github.com/Zhouball/BruinMenu \n \n
-    If you find an issue, send us an email at a.zhou@ucla.edu</string>
+    If you find an issue, send us an email at a.zhou@ucla.edu \n \n</string>
 
 </resources>
