--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     Source code is available at https://github.com/Zhouball/BruinMenu \n \n
     If you find an issue, send us an email at a.zhou@ucla.edu \n \n</string>
     <string name="title_activity_nutri_data_web_view">NutriDataWebView</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
