Added update frequency spinner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,15 @@
     If you find an issue, send us an email at a.zhou@ucla.edu \n \n</string>
     <string name="title_activity_nutri_data_web_view">NutriDataWebView</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    
+    <string-array name="frequency_array">
+        <item>Update every day</item>
+        <item>Update every twelve hours</item>
+        <item>Update every six hours</item>
+        <item>Update every three hours</item>
+        <item>Update every two hours</item>
+        <item>Update every hour</item>
+        <item>Update every thirty minutes</item>
+    </string-array>
 
 </resources>
