--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_quick_dining_menu">Quick Dining Menus</string>
     <string name="action_credits">Credits</string>
     <string name="home">Home</string>
     <string name="credits">Authors: Allen Zhou &amp; Preetham Reddy N.\n \n
